@@ -216,9 +216,15 @@ unix {
 }
 
 win32 {
-	HEADERS += 	prefassociations.h winfileassoc.h corelib/screensaver.h
-	SOURCES += 	prefassociations.cpp winfileassoc.cpp corelib/screensaver.cpp
-	FORMS += prefassociations.ui
+	DEFINES += USE_ASSOCIATIONS
+	
+	HEADERS += corelib/screensaver.h
+	SOURCES += corelib/screensaver.cpp
+	contains( DEFINES, USE_ASSOCIATIONS ) {
+		HEADERS += 	prefassociations.h winfileassoc.h
+		SOURCES += 	prefassociations.cpp winfileassoc.cpp
+		FORMS += prefassociations.ui
+	}
 
 	contains(TEMPLATE,vcapp) {
 		LIBS += ole32.lib user32.lib
