@@ -1,5 +1,11 @@
 [b]Version 0.6.2[/b]:
 
+(2008-06-03)
+ * Added the possibility to compile smplayer in Windows without the
+   file associations code, so it doesn't write anything in the 
+   registry (important for a portable app). Just comment the line
+   DEFINES += USE_ASSOCIATIONS in smplayer.pro.
+   
 (2008-06-02)
  * Now the controlbar and floating control in the minigui can be 
    configured too.
